# freeswitch

./: .gitignore  Freeswitch.2017.sln
docs/script/: callOut.py
libs/esl/: fs_cli.2017.vcxproj
libs/esl/src/: libesl.2017.vcxproj
libs/libteletone/: libteletone.2017.vcxproj
libs/srtp/: libsrtp.2017.vcxproj
libs/win32/Sound_Files/: 16khz.2017.vcxproj  16khzmusic.2017.vcxproj  32khz.2017.vcxproj  32khzmusic.2017.vcxproj  48khz.2017.vcxproj  48khzmusic.2017.vcxproj  8khz.2017.vcxproj  8khzmusic.2017.vcxproj
libs/win32/apr/: libapr.2017.vcxproj
libs/win32/broadvoice/: libbroadvoice.2017.vcxproj
libs/win32/celt/: libcelt.2017.vcxproj
libs/win32/freetype/: freetype.2017.vcxproj
libs/win32/iksemel/: iksemel.2017.vcxproj
libs/win32/ilbc/: libilbc.2017.vcxproj
libs/win32/libav/: libav.2017.vcxproj
libs/win32/libcbt/: libcbt.2017.vcxproj
libs/win32/libcodec2/: libcodec2.2017.vcxproj
libs/win32/libg722_1/: libg722_1.2017.vcxproj
src/mod/applications/mod_helloworld/: Makefile.am  aa.cpp  mod_eric.c  mod_helloworld.c  mod_helloworld.h  mod_helloworld.vcxproj  mod_helloworld.vcxproj.filters  zzz.c
src/mod/applications/mod_helloworld/conf/autoload_configs/: helloworld.conf.xml  hellowrorld.conf.xml
src/mod/applications/mod_soundtouch/: Makefile.am  mod_soundtouch.cpp  mod_soundtouch.h
src/mod/event_handlers/mod_event_redis/: Makefile.am  mod_event_redis.c  mod_event_redis.h  mod_event_redis_simple.c
src/mod/event_handlers/mod_event_redis/conf/autoload_configs/: event_redis.conf.xml
w32/Console/: FreeSwitchConsole.2017.vcxproj
(+152 files in other folders)
